--- a/src/material/components/v-button.scss
+++ b/src/material/components/v-button.scss
@@ -1,5 +1,6 @@
 :not(.v-upload) > * > .v-button:not(.v-disabled):not(.borderless):not(.borderless-colored):not(.link):not(.quiet):not(.border):not(.primary):not(.friendly):not(.danger):not(.custom):not(.floating-action) {
-  background: $mat-card-color;
+  //background: $mat-card-color;
+  background: #f5f5f5;
 }
 
 body:not(.v-touch) :not(.v-upload) > * > .v-button:not(.v-disabled):not(.borderless):not(.borderless-colored):not(.border):not(.primary):not(.friendly):not(.danger):not(.link):not(.custom):not(.floating-action):hover {
@@ -105,7 +106,7 @@ body:not(.v-touch) .v-button:not(.v-disabled).borderless.custom:hover {
     cursor: pointer;
   }
   :not(.v-upload) > * > .v-button {
-    height: $v-unit-size;
+    height: $v-unit-size * 0.8;
   }
   :not(.v-upload) > * > .v-button.no-border-radius {
     border-radius: 0px !important;
